# roughness

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup_roughness.py  sitemap.xml
.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  test_pypi_publish.yml
about/: about.md  index.html
data/: adjust_shade_lookup.py  default_lookup.nc  los_facets_4D.npy  los_lookup_4D.npy  shade_bin_population_4D.npy  shade_lookup_4D.npy  shade_lookup_4D_old.npy  total_facets_4D.npy
data/diviner/: div_t2r.txt  diviner_filter_functions.hdf
data/m3/: m3_wls.json
docs/: gen_api_pages.py  getting_started.md  index.md  requirements.txt  rough_emission.ipynb  shadow_tables.ipynb
docs/javascript/: config.js
examples/: README.md  explore_lookup.py  explore_temperature_table.py  lookup_table_comparison.ipynb  m3_correction.py  make_los_table.py  make_shade_table_diagnostic.ipynb  rad_btemp_interactive.py  rough_emission.py  slope_dist.ipynb  slope_dist.py  slope_lookup.ipynb  slope_lookup.py
examples/plots/: plot_figs.py
figures/: roughness.mplstyle
figures/m3/: corr_m3.py  corr_m3_norerad.py  corr_m3_odd.py  plot_figs.py  temp_compare.py
gen_api_pages/: index.html
getting_started/: index.html
javascript/: config.js
reference/SUMMARY/: SUMMARY.md  index.html
reference/classes/: classes.md  index.html
reference/diviner/: diviner.md  index.html
reference/emission/: emission.md  index.html
reference/helpers/: helpers.md  index.html
reference/m3_correction/: index.html  m3_correction.md
reference/make_los_table/: index.html  make_los_table.md
reference/plotting/: index.html  plotting.md
reference/roughness/: index.html  roughness.md
rough_emission/: index.html
roughness/: __init__.py  classes.py  cli.py  config.py  diviner.py  emission.py  helpers.py  lineofsight.f90  m3_correction.py  make_los_table.py  make_shade_table.py  plotting.py  roughness.py  topoNshade.py
roughness/fortran/: lineofsight.f90
search/: search_index.json
shadow_table/: diag_make_shade_table.ipynb  make_shade_table.py  topoNshade.py
shadow_tables/: index.html
tests/: test_helpers.py  test_lookup.nc  test_make_los_table.py  test_roughness.py
