[tool]

[tool.poetry]
name = "roughness"
version = "0.10.1-alpha.0"
homepage = "https://github.com/NAU-PIXEL/roughness"
description = "Predict illumination of planetary surfaces accounting for roughness."
authors = ["Christian J. Tai Udovicic <cj.taiudovicic@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.19.5"
scipy = "^1.7.1"
rasterio = "^1.2.8"
netCDF4 = "^1.5.7"
rioxarray = "^0.11.1"
xarray = "^2022.3.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
black = "20.8b1"
jupyter = "^1.0"
matplotlib = "^3.4.1"
jupytext = "^1.11.2"
pre-commit = "^2.13.0"

[tool.black]
line-length=79
extend-exclude=["examples"]

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
disable=["R0913", "C0103", "E0401", "I1101"]
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=roughness --cov-branch --cov-report term-missing  -vv --color=yes"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
